@@ -1,11 +1,13 @@
 package com.lampify.security;
 
+import com.lampify.entity.UserRole;
 import com.lampify.service.TokenRevocationService;
 import jakarta.servlet.FilterChain;
 import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.core.userdetails.User;
 import org.springframework.security.web.authentication.WebAuthenticationDetailsSource;
@@ -13,7 +15,7 @@ import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
-import java.util.Collections;
+import java.util.List;
 
 @Component
 public class JwtAuthenticationFilter extends OncePerRequestFilter {
@@ -44,7 +46,12 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
                 && !tokenRevocationService.isRevoked(jwtUtil.getJtiFromToken(token))
                 && SecurityContextHolder.getContext().getAuthentication() == null) {
             String email = jwtUtil.getSubjectFromToken(token);
-            var userDetails = User.withUsername(email).password("[PROTECTED]").authorities(Collections.emptyList()).build();
+            String role = jwtUtil.getRoleFromToken(token);
+            var authorities = List.of(new SimpleGrantedAuthority("ROLE_" + role));
+            var userDetails = User.withUsername(email)
+                    .password("[PROTECTED]")
+                    .authorities(authorities)
+                    .build();
             var authentication = new UsernamePasswordAuthenticationToken(userDetails, null, userDetails.getAuthorities());
             authentication.setDetails(new WebAuthenticationDetailsSource().buildDetails(request));
             SecurityContextHolder.getContext().setAuthentication(authentication);
